--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,6 +16,12 @@
       - software-properties-common
     update_cache: yes
 
+- name: Dependent packages on Ubuntu 14 are installed
+  include_tasks: install_dependencies_for_ubuntu_14.yml
+  when:
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_major_version == "14"
+
 - name: Official Docker GPG Key is added
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
