--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -45,3 +45,10 @@
   service:
     name: docker
     state: '{{ docker_service_state }}'
+
+- name: Docker compose is installed
+  get_url:
+    url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-{{ ansible_system }}-{{ ansible_architecture }}"
+    dest: /usr/local/bin/docker-compose
+    force: true
+    mode: 0755
